--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -239,77 +239,10 @@ svg {
 .nav-list span:first-of-type:after {
     margin-top: 43px;
 }
-/*
-#home {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-#home .hi .hi-box {
-  position: absolute;
-  width: 100px;
-	height: 180px;
-  top: 45%;
-  left: 50%;
-  margin: -90px 0 0 -50px;
-  -webkit-transform: skew(20deg);
-	   -moz-transform: skew(20deg);
-	     -o-transform: skew(20deg);
-  mix-blend-mode: overlay;
-  background: white;
-}
-#home .hi .hi-message {
-  width: 400px;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  line-height: 22px;
-}
-#home .hands .left, #home .hands .right {
-  position: absolute;
-  width: 38vw;
-  bottom: 0;
-  opacity: 0.7;
-}
-#home .hands .left {
-  left: 5vw;
-}
-#home .hands .right {
-  right: 5vw;
-}
-
-#landing:after {
-  position: absolute;
-  content: "";
-  bottom: -40px;
-  left: 50%;
-  margin-left: -42px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 40px 40px 0 40px;
-  border-color: #b6f0f5 transparent transparent transparent;
-}
-
-
-#tail {
-    position: relative;
-    width: 100vw;
-    height: 250px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+.button-wrapper {
     text-align: center;
 }
-#tail h5 {
-    color: white;
-    padding-top: 100px;
+.button.expand {
+    margin: 3em auto 0 auto;
+    padding: 1em 3em;
 }
-*/
