Emotion project added

--- a/src/pages/work/docs/docs.css
+++ b/src/pages/work/docs/docs.css
@@ -1,1 +1,11 @@
-
+.smaller-self {
+    display: block;
+}
+.smaller-self img {
+    display: block;
+    width: 70%;
+    margin: auto;
+}
+.smaller-self p {
+    margin-top: 0;
+}
