Emotion framework image fix
Each project title fix

--- a/src/pages/work/emotion/emotion.css
+++ b/src/pages/work/emotion/emotion.css
@@ -18,6 +18,7 @@
 .framework {
     max-height: 400px;
     width: auto;
+    max-width: 100%;
     display: block;
     margin: auto;
     padding-bottom: 1em;
