--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -56,3 +56,9 @@ body {
 .mouse, .pencil {
     width: 50px;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Just+Me+Again+Down+Here|Rock+Salt');
+
+.loop {
+    font-family: 'Just Me Again Down Here', cursive;
+}
