--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,60 +1,14 @@
 body {
     width: 100vw;
-}
 
-#home {
-    padding-top: 3em;
-}
-.hi, .im {
-    flex-grow: 1;
-    position: relative;
-}
-.message {
-    position: absolute;
-}
-.hi {
-    width: 30%;
-    min-width: 250px;
-    padding: 1em 0 0.7em 0.5em;
-    -webkit-flex-grow: 1;
-}
-.hi .message{
-    left: 70%;
-    top: 18%;
-}
-.im {
-    width: 60%;
-    padding: 1em 0;
-    flex-grow: 1;
-    -webkit-flex-grow: 1;
-    min-width: 300px;
-}
-.im .message {
-    width: 100%;
-    left: 0%;
-    top: 17%;
-    text-align: center;
-    font-size: 1.2em;
-}
-.im .message .name {
-    font-weight: 900;
-}
-
-.box {
-    border: 2px solid black;
-    margin: 1em 0.5em;
-    text-align: center;
-    padding: 0;
-}
-.box-wrapper {
-    padding-bottom: 3em;
-}
-.find {
-    text-align: center;
-    padding: 1em 0;
-}
-.mouse, .pencil {
-    width: 50px;
 }
 
 
+.profile-container {
+    margin: 6em 7.14% 3em 7.14%;
+}
+.profile-img {
+}
+.work-list {
+
+}
