--- a/src/components/work/piece/piece.css
+++ b/src/components/work/piece/piece.css
@@ -1,10 +1,19 @@
 .piece  {
-    border: 2px solid black;
-    margin: 1em 0;
+    /*
+    -webkit-border-radius: 1em;
+    -moz-border-radius: 1em;
+    border-radius: 1em;
+    background: white;
+    display: inline-block;
+    position: relative;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
 
+    width: 24em;
+    margin: 1em;
 }
 .piece-half {
-    width: 45%;
+    width: 30%;
     margin: 0;
     min-width: 260px;
     flex-grow: 1;
@@ -13,29 +22,51 @@
     display: block;
     height: auto;
     min-height: 256px;
+
+
+    /*
     filter: grayscale(0%);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
+    */
 }
 .piece:hover .piece-half img {
-    filter: grayscale(90%);
 }
+
+
+.piece-img {
+    margin: 0;
+    min-width: 260px;
+    flex-grow: 1;
+
+}
+.piece-img img {
+    display: block;
+    height: auto;
+    border-radius: 50%;
+}
+
+.piece-tag, .piece-title, .piece-description {
+    /*color: #e2e2e2;*/
+}
+
+
 .piece-summary {
     padding: 1em 2em 2em 1.5em;
     position: relative;
     min-height: 13em;
+
 }
 .piece-summary span {
-    border-top: 2px solid #4A4A4A;
-    font-weight: 900;
+
 }
 .piece-summary .piece-title {
     font-weight: 800;
+
 }
 .piece-summary .summary-bottom {
-    position: absolute;
-    bottom: 0;
-    padding: 1em 1.2em 1em 0;
+
+
 }
