--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -5,10 +5,19 @@ body {
 
 
 .profile-container {
-    margin: 6em 7.14% 3em 7.14%;
+    margin: 4.5em 7.14% 1.5em 7.14%;
 }
-.profile-img {
+.profile-text {
+   padding: 2em 2em;
 }
-.work-list {
-
+.sans {
+    font-size: 1.1em;
+}
+.highlight {
+    border-bottom: 3px solid #6eb8d0;
+}
+@media only screen and (max-width: 955px) {
+    .profile-text {
+        padding: 0.5em;
+    }
 }
