--- a/src/pages/work/logue/logue.css
+++ b/src/pages/work/logue/logue.css
@@ -4,3 +4,13 @@
 .prototype {
     margin-top: 1em;
 }
+.shadow {
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.more-padding p:last-child{
+    padding: 1em 0.5em;
+    text-align: center;
+}
