--- a/src/components/credit/credit.css
+++ b/src/components/credit/credit.css
@@ -31,8 +31,8 @@
     width: 100vw;
 }
 .next-wrapper {
-    margin: 0 7.14%;
-    padding: 1.2em 0;
+    margin: 0 3em;
+    padding: 1.5em 0;
 }
 .home {
     font-size: 1em;
@@ -42,4 +42,7 @@
     height: 0.5em;
     background-color: black;
     margin: 3em auto 5em auto;
+}
+.toHome {
+    width: 2em;
 }
