--- a/src/components/work/piece/piece.css
+++ b/src/components/work/piece/piece.css
@@ -1,29 +1,18 @@
 .piece  {
-    /*
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    border-radius: 1em;
-    background: white;
-    display: inline-block;
-    position: relative;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
-
-    width: 480px;
-    margin: 0 1em;
-}
-.piece-half {
-    width: 30%;
     margin: 0;
+
+}
+.image-wrapper {
+    padding: 2.5em 0 0 0;
+}
+.piece-img {
+    margin: 0 auto;
     min-width: 260px;
     flex-grow: 1;
 }
 .piece-img img {
     display: block;
     height: auto;
-    min-height: 256px;
-
-
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%);
     -webkit-transition: all 0.2s ease-in;
@@ -32,41 +21,43 @@
     transition: all 0.2s ease-in;
 
 }
-.piece:hover .piece-img img {
+.piece:hover {
     filter: grayscale(80%);
     -webkit-filter: grayscale(80%);
 }
 
 
-.piece-img {
-    margin: 0;
-    min-width: 260px;
-    flex-grow: 1;
-
-}
-.piece-img img {
-    display: block;
-    height: auto;
-
-    border-radius: 50%;
-}
-
-.piece-tag, .piece-title, .piece-description {
-    /*color: #e2e2e2;*/
-}
-
 
 .piece-summary {
-    padding: 1em 2em 2em 1.5em;
+    padding: 1.3em 2em 2.3em 2em;
 }
 .piece-tag {
     margin: 0;
 }
-.piece-summary .piece-title {
-    font-weight: 800;
-
+.piece-title {
+    font-family: 'Lato', 'PT Sans', sans-serif;
 }
-.piece-summary .summary-bottom {
+.piece-tag {
+    font-family: 'Lato', 'PT Sans', sans-serif;
+    font-style: italic;
+    font-size: 0.9em;
+    padding: 0.3em 0 1em 0;
+}
 
+@media only screen and (max-width: 955px) {
+}
 
+.docs.piece {
+    background-image: linear-gradient(-145deg, #77D1FF 3%, #57A6FF 89%);
+}
+.bslide.piece {
+    /* bg: */
+    background-image: linear-gradient(-148deg, #D28CCE 2%, #6DCBFF 100%);
+}
+.logue.piece {
+    background-color: #E5E5E5;
+}
+.emo.piece {
+    /* Rectangle 4: */
+    background-image: linear-gradient(-22deg, #FFA4DB 0%, #FFC0A6 100%);
 }
