--- a/src/components/credit/credit.css
+++ b/src/components/credit/credit.css
@@ -46,3 +46,9 @@
 .toHome {
     width: 2em;
 }
+@media only screen and (max-width: 768px) {
+
+    .next-wrapper  {
+        margin: 0 7.14% 0 7.14%;
+    }
+}
